fixed margins and alignments

--- a/css/main.css
+++ b/css/main.css
@@ -23,9 +23,17 @@ a:hover{
 
 .container{
 	width:80%;
+	float:left;
+	margin-top:5px;
+	font-size:100%;
 	margin-left:auto;
 	margin-right:auto;
 	text-align:left;
 	background-color: #FFA500;
+}
+
+html{
+	height:100%;
+	margin-bottom:1px;
 }
 
